/*
 * Licensed to Ververica GmbH under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package org.apache.flink.statefun.examples.kafka;
option java_package = "com.ververica.statefun.workshop.generated";
option java_multiple_files = true;

message ReportFraud {
    string account = 1;
}

message QueryFraud {
    string account = 1;
}

message ReportedFraud {
    int32 count = 1;
}

message ExpireFraud { }

message CheckMerchantScore {
    string merchantId = 1;
}

message ReportedMerchantScore {
    oneof result {
        int32 score = 1;
        string error = 2;
    }
}